src/test/testCases/semanticErrors/duplicateState.moore
moore M1 {
    states {a1, a1}

    input {
        pins {
            clock:  10
        }

        transition {}
    }

    output {
        pins {}

        function {}
    }
}
